--- a/index.html
+++ b/index.html
@@ -1,60 +1,118 @@
 <html lang="en">
-  <head>
-    <title>Personal Home Page</title>
-  </head>
-  <body>
-<header class="c-site-header"> 
-   <nav aria-label="Main Site Links." class="nav-list">
-    <ul>
-      <li ><a href="#">Home</a></li>
-      <li><a href="#">Gallary</a></li>
-      <li><a href="#">Contact us</a></li>
-     </ul>
-  </nav>
-     <div class="nav-item">
-       <h1 class="header-text">Hello</h1>
-     <h3 class="header-text-name">I'am Dawit Asmerawork </h3>
-     <h5 class="header-text-des">Professional Graphics Designer & Web Developer</h5>
-     <button>Contact Me</button>
-     </div>
-</header>
-<main> 
-  <h1>Welcome!</h1>
-    <p><img src="https://ucarecdn.com/0dbfdb3c-7764-4361-852f-01c8c168e690/" alt="photo of mine">I'M Dawit Asmerawork, a professional graphics designer and web developer with years of experience in creating visually stunning designs and functional websites. As someone who is passionate about design and technology, I constantly seek new and innovative ways to create captivating designs that perfectly capture the essence of my clients' brands. Whether it's a logo, a website, or a marketing campaign, I always strive to deliver outstanding results that exceed my clients' expectations.
-My journey as a graphics designer started when I was young and fascinated by art and design. I would spend hours sketching and experimenting with colors, and I knew from an early age that I wanted to pursue a career in design. After completing my formal education, I started working as a freelance designer, honing my skills and building my portfolio. Over the years, I have worked with various clients across different industries, from small startups to large corporations, and I have gained invaluable experience and insights that have helped me grow as a designer.
-As a graphics designer, I specialize in creating logos, brand identities, marketing collateral, and other visual assets that effectively communicate the message of my clients' brand. I understand that every brand is unique, and I work closely with my clients to develop a deep understanding of their brand values, target audience, and goals. From there, I use my creativity and technical skills to create designs that resonate with their audience and drive business growth.
-From typography to color theory, I understand the importance of each element in creating a visually cohesive design that resonates with the target audience. I am proficient in industry-standard design software such as Adobe Photoshop and Illustrator, and I use my technical skills to produce high-quality designs that meet the needs of my clients. I also keep up-to-date with the latest design trends and techniques, ensuring that my designs are always fresh and relevant.
-In addition to graphic design, I am also an experienced web developer. As more and more businesses shift to online platforms, having a strong online presence has become crucial for success. I specialize in creating user-friendly and responsive websites that provide a seamless user experience across all devices. I am well-versed in various web development languages such as HTML, CSS, JavaScript, and PHP, and I stay up-to-date with the latest trends and techniques to ensure that my websites are always on the cutting edge.
-I understand that a website is the online representation of a brand, and I work closely with my clients to ensure that their website reflects their brand identity and goals. From the layout to the color scheme, I pay close attention to every detail to ensure that the website is visually appealing and easy to navigate. I also prioritize functionality, ensuring that the website is optimized for search engines and provides a smooth user experience.
-Overall, I am a dedicated and skilled professional who takes pride in delivering exceptional work that meets and exceeds my clients' expectations. I am passionate about design and technology, and I am committed to continually improving my skills and knowledge to provide the best possible service to my clients. Whether it's creating a logo or building a website, I am always up for a challenge and excited to work with new clients.
-  </p>
-  
-  <iframe  src="https://www.youtube.com/embed/phWxA89Dy94" title="YouTube video player" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  
-  </main>
-  <footer class="c-site-footer">
-    <div class="footer-item">
-      
-    <div class="contact-items">
-      <h4>Contact Us!</h4>
-        <form id="con-form" method="post" action="#">
-           <input class="con-txt" type="text" placeholder="Enter Your Full Name">
-           <input class="con-txt" type="email" placeholder="Enter Your Email Address">
-           <textarea id="con-msg" name="con-msg" rows="8" cols="40" placeholder="Type Your Messages Here"></textarea>
-            <button id="con-btn">Send It!</button>
-        </form>
-      </div>
-      <div class="con-lis-item">
-      <a href="https://github.com/Dawit0101">Github</a>
-       <a href="https://linkedin.com/in/david-asma">linkedin</a>
-       <a href="https://twitter.com/dawvid01">twitter</a>
-      </div>
-    </div>
-  </footer>
 
-<!-- Your test console.
+<head>
+    <title>Dawit Personal Home Page</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://img.icons8.com/external-kiranshastry-solid-kiranshastry/64/FD7E14/external-developer-coding-kiranshastry-solid-kiranshastry.png">
+</head>
+
+<body>
+    <header class="c-site-header">
+        <nav aria-label="Main Site Links." class="nav-list">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#Skill-lst">Skills</a></li>
+                <li><a href="#useful-links">Useful Link</a></li>
+                <li><a href="#contacts">Contact us</a></li>
+            </ul>
+        </nav>
+        <div class="nav-item">
+            <h1 class="header-text">Hello</h1>
+            <h3 class="header-text-name">I'am Dawit Asmerawork </h3>
+            <h5 class="header-text-des">Professional Graphics Designer & Web Developer</h5>
+            <button>Contact Me</button>
+        </div>
+    </header>
+    <main id="about">
+        <h1>About Me</h1>
+        <h2>who am i?</h2>
+        <div class="main-list">
+            <img src="https://ucarecdn.com/e83289fe-495d-4feb-8458-f7077777182e/" alt="photo of mine" class="main-img">
+            <p>Hi My Dawit Asmerawork, a graphics designer and web developer with years of experience creating visually stunning designs and functional websites. and I'm very passionate and dedicated to my work.
+            </p>
+        </div>
+
+        <h3 id="skill-txt">My Skills</h3>
+        <div class="main-skills" id="Skill-lst">
+            <div class="main-p-detail">
+                <img src="https://img.icons8.com/external-justicon-lineal-justicon/64/FD7E14/external-web-design-responsive-web-design-justicon-lineal-justicon-1.png" alt="web-design" class="skills-img">
+                <h2 class="main-p-txt">Website Design</h2>
+                <div class="main-p-list">
+                    <h4><span>Modern web design expertise</span></h4>
+                </div>
+            </div>
+            <div class="main-p-detail">
+                <img src="https://img.icons8.com/ios-glyphs/30/FD7E14/source-code.png" alt="web-design" class="skills-img">
+                <h2 class="main-p-txt">Web Development</h2>
+                <div class="main-p-list">
+                    <h4><span>Expert in web development</span></h4>
+                </div>
+            </div>
+            <div class="main-p-detail">
+                <img src="https://img.icons8.com/external-phatplus-lineal-phatplus/64/FD7E14/external-computer-networking-computing-network-phatplus-lineal-phatplus.png" alt="web-design" class="skills-img">
+                <h2 class="main-p-txt">Networking</h2>
+                <div class="main-p-list">
+                    <h4><span>Proficient in networking technology</span></h4>
+                </div>
+            </div>
+            <div class="main-p-detail">
+                <img src="https://img.icons8.com/dotty/80/FD7E14/adobe-photoshop.png" alt="web-design" class="skills-img">
+                <h2 class="main-p-txt">Photoshop Design</h2>
+                <div class="main-p-list">
+                    <h4><span>Expert in Photoshop design</span></h4>
+                </div>
+            </div>
+            <div class="main-p-detail">
+                <img src="https://img.icons8.com/dotty/80/FD7E14/adobe-illustrator.png" alt="web-design" class="skills-img">
+                <h2 class="main-p-txt">Illustrator</h2>
+                <div class="main-p-list">
+                    <h4><span>Illustrator design expertise</span></h4>
+                </div>
+            </div>
+            <div class="main-p-detail">
+                <img src="https://img.icons8.com/external-others-berkahicon/64/FD7E14/external-vlog-linely-influencer-others-berkahicon.png" alt="web-design" class="skills-img">
+                <h2 class="main-p-txt">Content Creator</h2>
+                <div class="main-p-list">
+                    <h4><span>Creative content creation skills</span></h4>
+                </div>
+            </div>
+        </div>
+        <div class="main-content" id="useful-links">
+            <h3 id="skill-txt">Useful Videos</h3>
+            <div class="main-content-list">
+                <iframe src="https://www.youtube.com/embed/phWxA89Dy94" title="YouTube video player" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/KAmSB5MQxOo" title="YouTube video player" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/3GzumUieDPY" title="YouTube video player" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/_IOZ8_cPgu8" title="YouTube video player" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
+
+
+    </main>
+    <footer class="c-site-footer" id="contacts">
+        <div class="footer-item">
+            <div class="contact-items">
+                <h4 class="con-txts">Contact Us!</h4>
+                <form id="con-form" method="post" action="#">
+                    <input class="con-txt" type="text" placeholder="Enter Your Full Name"><br/>
+                    <input class="con-txt" type="email" placeholder="Enter Your Email Address"><br/>
+                    <textarea id="con-msg" name="con-msg" rows="8" cols="40" placeholder="Type Your Messages Here"></textarea><br/>
+                    <button id="con-btn">Send It!</button>
+                </form>
+            </div>
+        </div>
+        <div class="con-lis-item">
+            <a href="https://github.com/Dawit0101">Github</a>
+            <a href="https://linkedin.com/in/david-asma">linkedin</a>
+            <a href="https://twitter.com/dawvid01">twitter</a>
+        </div>
+    </footer>
+
+    <!-- Your test console.
 Don't delete!-->
-<aside id="tests" aria-label="Test Readout." aria-live="polite" style="overflow:auto">
-</aside> 
-  </body>
+    <aside id="tests" aria-label="Test Readout." aria-live="polite" style="overflow:auto">
+    </aside>
+</body>
+
 </html>
