--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 class="header-text">Hello</h1>
             <h3 class="header-text-name">I'am Dawit Asmerawork </h3>
             <h5 class="header-text-des">Professional Graphics Designer & Web Developer</h5>
-            <button>Contact Me</button>
+            <button onclick="window.location.href='#contacts';">Contact Me</button>
         </div>
     </header>
     <main id="about">
